--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://js.tosspayments.com https://esm.sh; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.tailwindcss.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https://*.supabase.co https://*.supabase.in; connect-src 'self' https://*.supabase.co https://*.supabase.in https://api.tosspayments.com https://esm.sh wss://*.supabase.co; frame-src https://js.tosspayments.com;"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://js.tosspayments.com https://esm.sh; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.tailwindcss.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https://*.supabase.co https://*.supabase.in; connect-src 'self' https://*.supabase.co https://*.supabase.in https://api.tosspayments.com https://esm.sh wss://*.supabase.co https://fonts.gstatic.com; frame-src https://js.tosspayments.com;"
         },
         {
           "key": "X-Content-Type-Options",
@@ -23,6 +23,9 @@
     }
   ],
   "rewrites": [
-    { "source": "/((?!assets|favicon|manifest|sw|og-).*)", "destination": "/index.html" }
+    {
+      "source": "/((?!assets|favicon|manifest|sw|og-).*)",
+      "destination": "/index.html"
+    }
   ]
 }
